chore: fix demo button on tablet

--- a/src/sass/responsive.sass
+++ b/src/sass/responsive.sass
@@ -10,7 +10,7 @@
     position: relative
     z-index: 10
   .topSection .headerDescription
-    padding-bottom: 8rem
+    padding-bottom: 14rem
   .licenseSection
     padding-top: 15rem
   .cardViewContainer
